--- a/LABS/lab3/part1/css/styles.css
+++ b/LABS/lab3/part1/css/styles.css
@@ -1,3 +1,10 @@
+	/*
+    Name: Innocent Amini
+	Date: 08 September 2025
+	File: index.html
+	Desc: This is the home page for my INNO-CENT3 website 
+    */
+
 html {
   background-color: white;
 }
