Added the Link styles.
Made the links green,
 lose their underline while hovered or focused, and darkgreen while hovered over with the mouse pointer or focused.

--- a/LABS/lab3/part1/css/styles.css
+++ b/LABS/lab3/part1/css/styles.css
@@ -41,3 +41,15 @@ div.job-title {
     color: darkslategray;
     font-weight: bold;
     }
+
+/* Link styles */
+a {
+    color: green;
+    text-decoration: underline;
+}
+
+a:hover,
+a:focus {
+    color: darkgreen;
+    text-decoration: none;
+}
