edited the file name (css)
Edited the file name in the code.

--- a/LABS/lab3/part1/css/styles.css
+++ b/LABS/lab3/part1/css/styles.css
@@ -1,7 +1,7 @@
 	/*
     Name: Innocent Amini
 	Date: 08 October 2025
-	File: index.html
+	File: styles.css
 	Desc: This is the CSS file for the lab 3 assignment part 1.
     */
 
