--- a/LABS/lab3/part2/layout-challenge/style.css
+++ b/LABS/lab3/part2/layout-challenge/style.css
@@ -1,3 +1,9 @@
+	/*
+    Name: Innocent Amini
+	Date: 08 October 2025
+	File: style.css
+	Desc: This is the CSS file for the lab 3 assignment part 2.
+    */
 * {
     box-sizing: border-box;
 }
