--- a/LABS/lab3/part2/typesetting-challenge/style.css
+++ b/LABS/lab3/part2/typesetting-challenge/style.css
@@ -1,3 +1,10 @@
+	/*
+    Name: Innocent Amini
+	Date: 13 October 2025
+	File: styles.css
+	Desc: This is the CSS file for the lab 3 assignment part 2.
+    */
+
 /* General setup */
 
 * {
