--- a/LABS/lab3/part2/typesetting-challenge/style.css
+++ b/LABS/lab3/part2/typesetting-challenge/style.css
@@ -5,8 +5,8 @@
 	Desc: This is the CSS file for the lab 3 assignment part 2.
     */
 
-    /* 1. Applying fonts to page */
 
+/*1. Import fonts*/
 @import "https://fonts.googleapis.com/css2?family=Bevan:ital@0;1&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap";
 
 /* General setup */
@@ -44,3 +44,32 @@ footer {
 footer p {
     text-align: center;
 }
+
+/* 2. Typography */
+html {
+    font-family: "IBM Plex Serif", serif;
+}
+h1,
+h2 {
+    font-family: "Bevan", serif;
+}
+h1 {
+    font-size: 3rem;
+    text-align: center;
+    letter-spacing: 2px;
+}
+h2 {
+    font-size: 2rem;
+    margin-bottom: 0;
+    letter-spacing: 1px;
+}
+
+section h2 + p {
+    text-indent: 2rem;
+}
+p,
+li {
+    line-height: 1.6;
+    letter-spacing: 0.5px;
+}
+
