--- a/LABS/lab3/part2/typesetting-challenge/style.css
+++ b/LABS/lab3/part2/typesetting-challenge/style.css
@@ -73,3 +73,40 @@ li {
     letter-spacing: 0.5px;
 }
 
+
+/* 3. styling links */
+a {
+    outline: none;
+}
+
+a[href*="http"] {
+    background: url(external-link-52.png) no-repeat right center;
+    background-size: 14px 14px;
+    padding-right: 16px;
+}
+
+a:link,
+a:visited {
+    color: #aa6666;
+}
+
+a:focus,
+a:hover {
+    text-decoration: none;
+    color: #773333;
+}
+
+/* 4. List styling */
+
+ul,
+ol {
+    margin: 1rem 0;
+}
+
+ul {
+    list-style-type: square;
+}
+
+ol {
+    list-style-type: lower-roman;
+}
