--- a/LABS/lab3/part3/layout-challenge/style.css
+++ b/LABS/lab3/part3/layout-challenge/style.css
@@ -31,6 +31,10 @@ img {
 .grid {
     margin: 0 auto;
     max-width: 980px;
+    /* 4. <article> and <aside> as two flexible columns with a gap of 20px between items */
+    display: grid;
+    grid-template-columns:3fr 1fr;
+    gap: 20px;
 }
 
 nav {
