--- a/LABS/lab3/part3/layout-challenge/style.css
+++ b/LABS/lab3/part3/layout-challenge/style.css
@@ -66,10 +66,16 @@ nav a {
     list-style: none;
     margin: 0;
     padding: 0;
+
+      /* 5. Display photos in two-column grid */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 6px;
 }
 
 .feature {
     width: 200px;
+
     /* 3. Wrap text around feature image to the right and bottom */
     float: left;
     margin:  8px 20px 10px 0;
