--- a/LABS/lab3/part2/typesetting-challenge/style.css
+++ b/LABS/lab3/part2/typesetting-challenge/style.css
@@ -7,7 +7,10 @@
 
 
 /*1. Import fonts*/
-@import "https://fonts.googleapis.com/css2?family=Bevan:ital@0;1&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap";
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 
 /* General setup */
 
@@ -47,11 +50,12 @@ footer p {
 
 /* 2. Typography */
 html {
-    font-family: "IBM Plex Serif", serif;
+    font-family: "Roboto", sans-serif;
 }
 h1,
 h2 {
-    font-family: "Bevan", serif;
+    font-family: 'roboto', sans-serif;
+    font-weight: 900;
 }
 h1 {
     font-size: 3rem;
@@ -124,7 +128,7 @@ nav li {
 }
 
 nav li a {
-    font-family: "Bevan", serif;
+    font-family: 'Roboto', sans-serif;
     text-decoration: none;
     display: inline-block;
     width: 100%;
@@ -133,7 +137,7 @@ nav li a {
     text-align: center;
     letter-spacing: 1px;
     font-size: 1.3rem;
-    font-weight: bold;
+    font-weight: 900;
     border: 1px solid #aa6666;
 }
 
