Added comments to Lab 4 Part 1

--- a/LABS/lab4/part1/css/styles.css
+++ b/LABS/lab4/part1/css/styles.css
@@ -1,3 +1,10 @@
+/*
+    Name: Innocent Amini
+	Date: 19 November 2025
+	File: styles.css
+	Desc: This is the CSS file for the lab 4 assignment part 1.
+*/
+
 body {
   font: 1.2em / 1.5 system-ui;
   margin: 0 auto;
