Added comments to Lab 4 Part 2

--- a/LABS/lab4/part2/css/styles.css
+++ b/LABS/lab4/part2/css/styles.css
@@ -1,3 +1,10 @@
+/*
+    Name: Innocent Amini
+	Date: 20 November 2025
+	File: styles.css
+	Desc: This is the CSS file for the lab 4 assignment part 2.
+*/
+
 body {
   font-family: sans-serif;
   width: 640px;
