Added comments to Lab 4 Part 3

--- a/LABS/lab4/part3/css/style.css
+++ b/LABS/lab4/part3/css/style.css
@@ -1,3 +1,10 @@
+/*
+    Name: Innocent Amini
+	Date: 23 November 2025
+	File: styles.css
+	Desc: This is the CSS file for the lab 4 assignment part 3.
+*/
+
 html, body {
   margin: 0;
 }
