--- a/LABS/lab4/part4/css/style.css
+++ b/LABS/lab4/part4/css/style.css
@@ -1,3 +1,9 @@
+/*
+    Name: Innocent Amini
+	Date: 25 November 2025
+	File: styles.css
+	Desc: This is the CSS file for the lab 4 assignment part 4.
+*/
 
 html, body {
   margin: 0;
