Added comments to Lab 4 Part 5

--- a/LABS/lab4/part5/forms-challenge/css/style.css
+++ b/LABS/lab4/part5/forms-challenge/css/style.css
@@ -1,3 +1,10 @@
+/*
+    Name: Innocent Amini
+	Date: 25 November 2025
+	File: styles.css
+	Desc: This is the CSS file for lab 4 assignment part 5.
+*/
+
 /* Basic font styles */
 
 body {
