Added comments to lab5.

--- a/LABS/lab5/assessment-files/style.css
+++ b/LABS/lab5/assessment-files/style.css
@@ -1,3 +1,10 @@
+/*
+  Name: Innocent Amini
+	Date: 2 December 2025
+	File: styles.css
+	Desc: This is the CSS file for Accessibility troubleshooting assignment.
+*/
+
 /* || General setup */
 
 html, body {
