--- a/LABS/lab5/assessment-files/style.css
+++ b/LABS/lab5/assessment-files/style.css
@@ -58,7 +58,7 @@ p, li, table {
 
 /* || header layout */
 
-div[class="nav"], article, footer, .secondary {
+nav, article, footer, .secondary {
   background-color: #fff;
 }
 
@@ -254,4 +254,10 @@ audio {
 
 .comment-container li p:nth-child(2) {
   flex: 5;
+}
+.transcript {
+  font-size: 1.4rem;
+  background-color: #cce;
+  padding: 10px;
+  margin-top: 10px;
 }
